--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/devenkhatri/dg-middleware#readme",
   "dependencies": {
+    "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
